<resources>

    <string name="app_name">finalapp</string>
    <string name="menu_name">WHAT PC BUY?</string>
    <string name="login_email">Email</string>
    <string name="login_passoword">Password</string>
    <string name="login_confirm_passoword">Confirm Password</string>
    <string name="login_sign_in">Sing In</string>
    <string name="login_sign_ip">Sing Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sign_in_google">Sing In with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Create a new account</string>
    <string name="login_go_login">Go back to Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
